--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,7 @@ The flexible design of geode allows for a wide variety of geospatial work. The t
 
 Users of this tool are expected to have a basic understanding of the characteristics, limitations and use of geospatial data and the basic methods used in the analysis of such data.  
 
+
 ## Installation
 
 You can install geode directly in R from [GitHub](https://github.com/) with:
@@ -37,11 +38,16 @@ remotes::install_github("cpacc/geode")
 
 Alternatively, you can download geode as a zip file and install following the instructions in the User's Manual under the Chapter 1 section *Downloading and installing*.
 
-https://github.com/cpacc/geode/blob/master/zip/geode_zip.zip
+https://github.com/cpacc/geode/blob/main/zip/geode_0.1.1.tar.7z
+
+To unzip the file after downloading, you will need to install the freely available 7-Zip program from https://www.7-zip.org/
+
 
 ## Getting started
 
-All technical details, examples and instructions for getting started are found in the geode User's Manual. 
+All technical details, system requirements, examples and instructions for getting started are found in the geode User's Manual.  A PDF version of the manual can be found at
+
+https://github.com/cpacc/geode/blob/main/zip/users_manual_PDF.pdf
 
 
 
