--- a/README.Rmd
+++ b/README.Rmd
@@ -49,5 +49,9 @@ All technical details, system requirements, examples and instructions for gettin
 
 https://github.com/cpacc/geode/blob/main/zip/users_manual_PDF.pdf
 
+An HTML version of the manual is also provided at 
 
+https://github.com/cpacc/geode/blob/main/zip/users_manual_HTML.7z
+
+The HTML version is contained in a zip folder.  Download and unzip (using 7-zip, as above), and then click on the manual shortcut 'users_manual_HTML'.
 
