--- a/README.Rmd
+++ b/README.Rmd
@@ -55,3 +55,9 @@ https://github.com/cpacc/geode/blob/main/zip/users_manual_HTML.7z
 
 The HTML version is contained in a zip folder.  Download and unzip (using 7-zip, as above), and then click on the manual shortcut 'users_manual_HTML'.
 
+
+## Example data
+
+All data files used in the examples are freely available online.  For ease-of-use, certain data files are also included here as a 7-zip file
+
+https://github.com/cpacc/geode/blob/main/zip/example_data.7z
